--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ AdventOfCode-CLI/
 input
 runner.py
 
+### GoLang
+gobin/
+
 ### PyCharm template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
